@startuml
'https://plantuml.com/class-diagram

class Instructor {
    ~String firstName
    ~String lastName
    ~String officeNumber

    +String getFirstName()
    +void setFirstName(String firstName)
    +String getLastName()
    +void setLastName(String lastName)
    +String getOfficeNumber()
    +void setOfficeNumber(String officeNumber)
    +String toString()
}

class Textbook {
    ~String title;
    ~String author;
    ~String publisher;

    +String getTitle()
    +void setTitle(String title)
    +String getAuthor()
    +void setAuthor(String author)
    +String getPublisher()
    +void setPublisher(String publisher)
    +String toString()
}

Course o-- Instructor : aggregation
Course o-- Textbook : aggregation

class Course {
    ~String name
    ~ArrayList<Instructor>instructors
    ~ArrayList<Textbook>textbooks;

    +Course()
    +String getName()
    +void setName(String name)
    +ArrayList<Instructor>getInstructors()
    +void setInstructor(Instructor instructor)
    +ArrayList<Textbook>getTextbooks()
    +void setTextbook(Textbook textbook)
    +String toString()
    +void printCourse()
}

class Driver {
    +void {static} main(String[] args)
}

@enduml